--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 <div class="card-group px-3">
 	<div class="row g-3">
-		<div class="col-sm-4 col-md-12 col-lg-4">
-			<div class="card border-0 position-relative ">
+		<div class="col col-md-12 col-lg-4">
+			<div class="card border-0 position-relative">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
                 <span role="button" class="billede-knap">BØRNEVENLIGE</span>
 			</div>
