--- a/Checkout.html
+++ b/Checkout.html
@@ -57,12 +57,11 @@
                     <div class="card-body p-4">
                         <div class="row">
                             <div class="col">
-                                <h5 class="mb-3"><a href="#" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Continue shopping</a></h5>
+                                <h5 class="mb-3"><span href="#" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Fortsæt shopping</span></h5>
                                 <hr>
                                 <div class="d-flex justify-content-between align-items-center mb-4">
                                     <div>
-                                        <p class="mb-1">Shopping cart</p>
-                                        <p class="mb-0">You have 4 items in your cart</p>
+                                        <h4 class="mb-0">Du har 3 ting i din kurv</h4>
                                     </div>
                                 </div>
                                 <div class="card mb-3">
@@ -70,19 +69,19 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="images/headshot200px.jpg" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5>Iphone 11 pro</h5>
-                                                    <p class="small mb-0">256GB, Navy Blue</p>
+                                                    <h5>X CHOKOLADE</h5>
+                                                    <p class="small mb-0">24 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 50px;">
+                                                <div style="width: 30px;">
                                                     <h5 class="fw-normal mb-0">2</h5>
                                                 </div>
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0">$900</h5>
+                                                    <h5 class="mb-0">200.00</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -95,19 +94,19 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="images/77d7223aed11257aa68c3f34663ee1a5.jpg" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5>Canon EOS M50</h5>
-                                                    <p class="small mb-0">Onyx Black</p>
+                                                    <h5>X CHOKOLADE</h5>
+                                                    <p class="small mb-0">12 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 50px;">
+                                                <div style="width: 30px;">
                                                     <h5 class="fw-normal mb-0">1</h5>
                                                 </div>
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0">$1199</h5>
+                                                    <h5 class="mb-0">200.00</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -120,24 +119,21 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img4.webp"
-                                                         class="img-fluid rounded-3" alt="Shopping item"
-                                                         style="width: 65px;">
+                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5>MacBook Pro</h5>
-                                                    <p class="small mb-0">1TB, Graphite</p>
+                                                    <h5>CHOKOLADE</h5>
+                                                    <p class="small mb-0">10 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 50px;">
+                                                <div style="width: 30px;">
                                                     <h5 class="fw-normal mb-0">1</h5>
                                                 </div>
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0">$1799</h5>
+                                                    <h5 class="mb-0">200.00</h5>
                                                 </div>
-                                                <a href="#!" style="color: #cecece;"><i
-                                                        class="fas fa-trash-alt"></i></a>
+                                                <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -148,23 +144,23 @@
 
                             <div class="d-flex justify-content-between">
                                 <p class="mb-2">Subtotal</p>
-                                <p class="mb-2">$4798.00</p>
+                                <p class="mb-2">400.00 kr</p>
                             </div>
 
                             <div class="d-flex justify-content-between">
-                                <p class="mb-2">Shipping</p>
-                                <p class="mb-2">$20.00</p>
+                                <p class="mb-2">Levering</p>
+                                <p class="mb-2">0 kr</p>
                             </div>
 
                             <div class="d-flex justify-content-between mb-4">
-                                <p class="mb-2">Total(Incl. taxes)</p>
-                                <p class="mb-2">$4818.00</p>
+                                <p class="mb-2">Total</p>
+                                <p class="mb-2">400.00 kr</p>
                             </div>
 
                             <button type="button" class="btn btn-info btn-block btn-lg">
                                 <div class="d-flex justify-content-between">
-                                    <span>$4818.00</span>
-                                    <span>Checkout<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                                    <span>400.00 kr</span>
+                                    <span>Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                 </div>
                             </button>
 
