--- a/Checkout.html
+++ b/Checkout.html
@@ -57,7 +57,8 @@
                     <div class="card-body p-4">
                         <div class="row">
                             <div class="col">
-                                <h5 class="mb-3"><span href="#" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Fortsæt shopping</span></h5>
+                                <h5 class="mb-3"><span href="#" class="text-body"><i
+                                        class="fas fa-long-arrow-alt-left me-2"></i>Fortsæt shopping</span></h5>
                                 <hr>
                                 <div class="d-flex justify-content-between align-items-center mb-4">
                                     <div>
@@ -69,7 +70,8 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3"
+                                                         alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
                                                     <h5>X CHOKOLADE</h5>
@@ -94,7 +96,8 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3"
+                                                         alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
                                                     <h5>X CHOKOLADE</h5>
@@ -119,7 +122,8 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="d-flex flex-row align-items-center">
                                                 <div>
-                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
+                                                    <img src="images/Chokolade-3styk.png" class="img-fluid rounded-3"
+                                                         alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
                                                     <h5>CHOKOLADE</h5>
@@ -133,7 +137,7 @@
                                                 <div style="width: 80px;">
                                                     <h5 class="mb-0">200.00</h5>
                                                 </div>
-                                                <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
+                                                <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
                                         </div>
                                     </div>
