--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="col-sm-4 col-md-6 col-lg-4">
 			<div class="card border-0 position-relative ">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
-                <span role="button" class="billede-knap">EKLUSIVE</span>
+                <span role="button" class="billede-knap">EKSKLUSIVE</span>
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
