--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
         </button>
         <div class="collapse navbar-collapse navbar-dark" id="navbarText">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item text-end">
-                    <a class="nav-link" aria-current="page" href="#">PRODUKTER</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle px-4" href="#" id="navbarDropdownMenuLink2" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">DET FESTLIGE</a></li>
+                        <li><a class="dropdown-item" href="#">DET EKSKLUSIVE</a></li>
+                        <li><a class="dropdown-item" href="#">DET BØRNEVENLIGE</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="OmOs.html">OM OS</a>
