--- a/Checkout.html
+++ b/Checkout.html
@@ -28,17 +28,17 @@
         </a>
         <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span> <!-- Udskift med font awesome ikon -->
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse navbar-dark" id="navbarText">
+        <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle px-4" href="#" id="navbarDropdownMenuLink2" role="button"
+                <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">DET FESTLIGE</a></li>
-                        <li><a class="dropdown-item" href="#">DET EKSKLUSIVE</a></li>
-                        <li><a class="dropdown-item" href="#">DET BØRNEVENLIGE</a></li>
+                    <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
+                        <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
+                        <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
                     </ul>
                 </li>
                 <li class="nav-item text-end">
@@ -46,6 +46,9 @@
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="#">KONTAKT</a>
+                </li>
+                <li class="nav-item text-end">
+                    <a class="nav-link" href="Checkout.html">DIN KURV (0)</a>
                 </li>
             </ul>
         </div>
