--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -27,7 +27,39 @@
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
 
-<!-- Her skal sidens indhold ligge -->
+<nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
+    <div class="container-fluid position-relative">
+        <a class="position-absolute logo-placering" href="index.html">
+            <img src="images/Logo-Design.png" alt="Logo" width="160">
+        </a>
+        <button class="navbar-toggler navbar-dark ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse nav-item text-end" id="navbarText">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">PRODUKTER</a>
+                    <ul class="dropdown-menu bg-mørkeBrun text-end" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="Produkt-Festlige.html">DET FESTLIGE</a></li>
+                        <li><a class="dropdown-item" href="Produkt-Eksklusive.html">DET EKSKLUSIVE</a></li>
+                        <li><a class="dropdown-item" href="Produkt-Børnevenligt.html">DET BØRNEVENLIGE</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item text-end">
+                    <a class="nav-link" href="OmOs.html">OM OS</a>
+                </li>
+                <li class="nav-item text-end">
+                    <a class="nav-link" href="#">KONTAKT</a>
+                </li>
+                <li class="nav-item text-end">
+                    <a class="nav-link" href="Checkout.html">DIN KURV (0)</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 </body>
 </html>
