Opbygning af undersider

--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -19,7 +19,6 @@
 
 </head>
 
-<!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-mørkeBrun py-3">
@@ -56,5 +55,52 @@
     </div>
 </nav>
 
+<div class="hero-image">
+</div>
+
+<div class="TekstForside">
+    <h1 class="Introtekst">PRODUKTER // DET FESTLIGE</h1>
+    <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
+</div>
+
+<div class="card-group px-3">
+    <div class="row g-3">
+        <div class="col-sm-4 col-md-12 col-lg-4">
+            <div class="card border-0 position-relative ">
+                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4">
+            <div class="card border-0 position-relative ">
+                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+            </div>
+        </div>
+        <div class="col-sm-4 col-md-6 col-lg-4 pb-3">
+            <div class="card border-0 position-relative ">
+                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<footer class="footer-distributed">
+    <div class="footer-right">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+    </div>
+    <div class="footer-left">
+        <p class="footer-links">
+            <a class="link-1" href="#">HJEM</a>
+            <a href="#">OM OS</a>
+            <a href="#">KONTAKT</a>
+            <a href="#">SHOP</a>
+        </p>
+        <p>CHOCOLATE CLUB &copy; 2022</p>
+    </div>
+</footer>
+
+
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
