--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="card-group px-3">
 	<div class="row g-3">
 		<div class="col col-md-12 col-lg-4">
-			<div class="card border-0 position-relative">
+			<div class="card border-0 position-relative m-0"> <!-- style="width: 80%" -->
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
                 <span role="button" class="billede-knap">BØRNEVENLIGE</span>
 			</div>
@@ -83,7 +83,7 @@
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
-			<div class="card border-0 position-relative ">
+			<div class="card border-0 position-relative">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
                 <span role="button" class="billede-knap">FESTLIGE</span>
 			</div>
