Omos side - element placering, padding og spacing

--- a/OmOs.html
+++ b/OmOs.html
@@ -61,32 +61,32 @@
 
 <div class="container-fluid px-5 py-3">
     <div class="row forside-omos py-3">
-        <div class="col-12 col-lg-3" style="border: 1px solid red">
+        <div class="col-12 col-lg-3">
             <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
-        <div class="col-12 col-lg-9" style="border: 1px solid red">
-            <h1>Thomas Trads</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        <div class="col-12 col-lg-9">
+            <h1 class="text-center text-lg-start">Thomas Trads</h1>
+            <p class="py-2 py-lg-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
     </div>
 
     <div class="row forside-omos py-3">
-        <div class="col-12 col-lg-9 omos-reorder1" style="border: 1px solid red">
-            <h1>Thomas Trads</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        <div class="col-12 col-lg-9 omos-reorder1" >
+            <h1 class="text-center text-lg-start">Thomas Trads</h1>
+            <p class="py-2 py-lg-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
-        <div class="col-12 col-lg-3 omos-reorder2" style="border: 1px solid red">
+        <div class="col-12 col-lg-3 omos-reorder2">
             <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
     </div>
 
     <div class="row forside-omos py-3">
-        <div class="col-12 col-lg-3" style="border: 1px solid red">
+        <div class="col-12 col-lg-3">
             <img src="images/headshot-black-male-glasses-400px.jpg" class="person1" alt="person">
         </div>
-        <div class="col-12 col-lg-9" style="border: 1px solid red">
-            <h1>Thomas Trads</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
+        <div class="col-12 col-lg-9">
+            <h1 class="text-center text-lg-start">Thomas Trads</h1>
+            <p class="py-2 py-lg-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, nihil.</p>
         </div>
     </div>
 </div>
