--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li class="nav-item text-end">
-                    <a class="nav-link" href="OmOs.html">OM OS</a>
+                    <a class="nav-link" href="#">OM OS</a>
                 </li>
                 <li class="nav-item text-end">
                     <a class="nav-link" href="#">KONTAKT</a>
