Checkout - tekst størrelser

--- a/Checkout.html
+++ b/Checkout.html
@@ -83,16 +83,13 @@
                                                          alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5>X CHOKOLADE</h5>
+                                                    <h5 style="font-size: 15px">X CHOKOLADE</h5>
                                                     <p class="small mb-0">24 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 30px;">
-                                                    <h5 class="fw-normal mb-0">2</h5>
-                                                </div>
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0">200.00</h5>
+                                                    <h5 class="mb-0" style="font-size: 15px">200.00</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -109,16 +106,13 @@
                                                          alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5>X CHOKOLADE</h5>
+                                                    <h5 style="font-size: 15px">X CHOKOLADE</h5>
                                                     <p class="small mb-0">12 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 30px;">
-                                                    <h5 class="fw-normal mb-0">1</h5>
-                                                </div>
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0">200.00</h5>
+                                                    <h5 class="mb-0" style="font-size: 15px">200.00</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -135,16 +129,13 @@
                                                          alt="Shopping item" style="width: 65px;">
                                                 </div>
                                                 <div class="ms-3">
-                                                    <h5>CHOKOLADE</h5>
+                                                    <h5 style="font-size: 15px">CHOKOLADE</h5>
                                                     <p class="small mb-0">10 stk.</p>
                                                 </div>
                                             </div>
                                             <div class="d-flex flex-row align-items-center">
-                                                <div style="width: 30px;">
-                                                    <h5 class="fw-normal mb-0">1</h5>
-                                                </div>
                                                 <div style="width: 80px;">
-                                                    <h5 class="mb-0">200.00</h5>
+                                                    <h5 class="mb-0" style="font-size: 15px">200.00</h5>
                                                 </div>
                                                 <a href="#" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                                             </div>
@@ -161,7 +152,7 @@
                             </div>
 
                             <div class="d-flex justify-content-between">
-                                <p class="mb-2">Levering</p>
+                                <p class="mb-2">Click & Collect</p>
                                 <p class="mb-2">0 kr</p>
                             </div>
 
@@ -172,8 +163,8 @@
 
                             <button type="button" class="btn btn-info btn-block btn-lg">
                                 <div class="d-flex justify-content-between">
-                                    <span>400.00 kr</span>
-                                    <span>Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                                    <span style="font-size: 18px">400.00 kr</span>
+                                    <span style="font-size: 18px">Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                 </div>
                             </button>
 
