Undersider - placering af elementer

--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -58,16 +58,18 @@
 <div class="hero-image">
 </div>
 
-<div class="TekstForside">
+<div class="TekstForside px-5">
     <h1 class="Introtekst">PRODUKTER // DET FESTLIGE</h1>
     <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
 </div>
 
-<div class="card-group px-3">
+<div class="card-group px-3 px-lg-5 py-5">
     <div class="row g-3">
         <div class="col-sm-4 col-md-12 col-lg-4">
-            <div class="card border-0 position-relative ">
+            <div class="card border-0 position-relative bg-lyseBrun">
                 <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+                <h4 class="py-2">Lej en chokoladefontæne</h4>
+                <p class="produktantal">1 stk</p>
             </div>
         </div>
         <div class="col-sm-4 col-md-6 col-lg-4">
