--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
 </div>
 
-<div class="card-group px-3">
+<div class="card-group px-3 px-lg-5 py-5">
 	<div class="row g-3">
 		<div class="col col-md-12 col-lg-4">
 			<div class="card border-0 position-relative m-0"> <!-- style="width: 80%" -->
