--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -58,26 +58,35 @@
 <div class="hero-image">
 </div>
 
-<div class="TekstForside">
+<div class="TekstForside px-5">
     <h1 class="Introtekst">PRODUKTER // DET BØRNEVENLIGE</h1>
     <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
 </div>
 
-<div class="card-group px-3">
+<div class="card-group px-3 px-lg-5 py-5">
     <div class="row g-3">
-        <div class="col-sm-4 col-md-12 col-lg-4">
-            <div class="card border-0 position-relative ">
-                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+        <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
+            <div class="card border-0 position-relative bg-lyseBrun">
+                <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" style="min-height: 575px" alt="chokolade">
+                <h4 class="py-3 px-lg-2">Chokoladeknapper</h4>
+                <p class="produktantal px-lg-2">1 pose.</p>
+                <span role="button" class="billede-knap">500 kr.</span>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4">
-            <div class="card border-0 position-relative ">
-                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+        <div class="col-sm-4 col-md-6 col-lg-4 py-4 py-lg-0">
+            <div class="card border-0 position-relative bg-lyseBrun">
+                <img src="images/Chokolade-2styk.png" class="card-img-top px-lg-2" alt="chokolade">
+                <h4 class="py-3">Choco Cloud</h4>
+                <p class="produktantal">8 stk.</p>
+                <span role="button" class="billede-knap">500 kr.</span>
             </div>
         </div>
-        <div class="col-sm-4 col-md-6 col-lg-4 pb-3">
-            <div class="card border-0 position-relative ">
-                <img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+        <div class="col-sm-4 col-md-6 col-lg-4 pb-3 py-4 py-lg-0">
+            <div class="card border-0 position-relative bg-lyseBrun">
+                <img src="images/Artboard%20–%201.png" class="card-img-top px-lg-2" alt="chokolade">
+                <h4 class="py-3">Mælkechokolade</h4>
+                <p class="produktantal">12 stk.</p>
+                <span role="button" class="billede-knap">500 kr.</span>
             </div>
         </div>
     </div>
