--- a/Checkout.html
+++ b/Checkout.html
@@ -10,7 +10,7 @@
     <meta name="copyright" content="Information om copyright">
 
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/Produktsider.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -58,8 +58,12 @@
 <div class="hero-image">
 </div>
 
-<section class="h-100 h-custom">
-    <div class="container py-5 h-100">
+<div class="TekstForside">
+    <h1 class="Introtekst">Checkout</h1>
+</div>
+
+<section class="h-90 h-custom pb-4">
+    <div class="container py-2 h-90">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col">
                 <div class="card">
@@ -167,14 +171,10 @@
                                     <span style="font-size: 18px">Fortsæt til betaling<i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                                 </div>
                             </button>
-
                         </div>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
     </div>
 </section>
