--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -59,8 +59,8 @@
 </div>
 
 <div class="TekstForside px-lg-5">
-    <h1 class="Introtekst">PRODUKTER // DET FESTLIGE</h1>
-    <p class="TekstForside-paragraph px-lg-5">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
+    <h1 class="Introtekst">PRODUKTER // DET BØRNEVENLIGE</h1>
+    <p class="TekstForside-paragraph py-lg-3">Chocolate Club laver chokolade til en hver smag. Alt er udviklet og tilsmagt med kærlighed af vores tre chocolatiers. Er du til lækker kvalitets chokolade, så imødekommer det eksklusive dine behov. Det børnevenlige er også til dig med en barnlig sjæl og sidst men ikke mindst har vi fantastiske produkter til dig der har en større begivenhed i sigte. </p>
 </div>
 
 <div class="card-group px-3 px-lg-5 py-5">
