--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -67,7 +67,7 @@
     <div class="row g-3">
         <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" style="min-height: 575px" alt="chokolade">
+                <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3 px-lg-2">Chokoladeknapper</h4>
                 <p class="produktantal px-lg-2">1 pose.</p>
                 <span role="button" class="billede-knap">500 kr.</span>
