Rettet billed størrelser og prismarkater

--- a/Produkt-Festlige.html
+++ b/Produkt-Festlige.html
@@ -70,7 +70,7 @@
                 <img src="images/Chokoladefontæne.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3 px-lg-2">Lej en chokoladefontæne</h4>
                 <p class="produktantal px-lg-2">1 stk.</p>
-                <span role="button" class="billede-knap">500 kr.</span>
+                <span role="button" class="billede-knap">499 kr.</span>
             </div>
         </div>
         <div class="col-sm-4 col-md-6 col-lg-4 py-4 py-lg-0">
@@ -78,15 +78,15 @@
                 <img src="images/Jordbær.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3">Chokolade overtrukketjordbær</h4>
                 <p class="produktantal">8 stk.</p>
-                <span role="button" class="billede-knap">500 kr.</span>
+                <span role="button" class="billede-knap">99 kr.</span>
             </div>
         </div>
         <div class="col-sm-4 col-md-6 col-lg-4 pb-3 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Chokolade-3styk.png" class="card-img-top px-lg-2" alt="chokolade">
+                <img src="images/FyldteChokolader.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3">Fyldte chokolader</h4>
-                <p class="produktantal">24 stk.</p>
-                <span role="button" class="billede-knap">500 kr.</span>
+                <p class="produktantal">18 stk.</p>
+                <span role="button" class="billede-knap">149 kr.</span>
             </div>
         </div>
     </div>
