--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
 	<div class="row g-3">
 		<div class="col col-md-12 col-lg-4">
 			<div class="card border-0 position-relative m-0"> <!-- style="width: 80%" -->
-				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+				<img src="images/ForsideBarn.png" class="card-img-top" alt="chokolade">
                 <a href="Produkt-Børnevenligt.html"><span role="button" class="billede-knap">BØRNEVENLIGE</span></a>
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4">
 			<div class="card border-0 position-relative ">
-				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
+				<img src="images/Dessertchokolader.png" class="card-img-top" alt="chokolade">
                 <a href="Produkt-Eksklusive.html"><span role="button" class="billede-knap">EKSKLUSIVE</span></a>
 			</div>
 		</div>
 		<div class="col-sm-4 col-md-6 col-lg-4 pb-3">
 			<div class="card border-0 position-relative">
 				<img src="images/pexels-emma-bauso-2253842.jpg" class="card-img-top" alt="chokolade">
-                <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">FESTLIGE</span></a>
+                <a href="Produkt-Festlige.html"><span role="button" class="billede-knap">BEGIVENEHDER</span></a>
 			</div>
 		</div>
 	</div>
