--- a/Produkt-Børnevenligt.html
+++ b/Produkt-Børnevenligt.html
@@ -70,15 +70,15 @@
                 <img src="images/Chokoladeknapper.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3 px-lg-2">Chokoladeknapper</h4>
                 <p class="produktantal px-lg-2">1 pose.</p>
-                <span role="button" class="billede-knap">500 kr.</span>
+                <span role="button" class="billede-knap">39 kr.</span>
             </div>
         </div>
         <div class="col-sm-4 col-md-6 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Chokolade-2styk.png" class="card-img-top px-lg-2" alt="chokolade">
+                <img src="images/Dessertchokolader.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3">Choco Cloud</h4>
                 <p class="produktantal">8 stk.</p>
-                <span role="button" class="billede-knap">500 kr.</span>
+                <span role="button" class="billede-knap">49 kr.</span>
             </div>
         </div>
         <div class="col-sm-4 col-md-6 col-lg-4 pb-3 py-4 py-lg-0">
@@ -86,7 +86,7 @@
                 <img src="images/Artboard%20–%201.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3">Mælkechokolade</h4>
                 <p class="produktantal">12 stk.</p>
-                <span role="button" class="billede-knap">500 kr.</span>
+                <span role="button" class="billede-knap">99,95 kr.</span>
             </div>
         </div>
     </div>
