--- a/Produkt-Eksklusive.html
+++ b/Produkt-Eksklusive.html
@@ -67,7 +67,7 @@
     <div class="row g-3">
         <div class="col-sm-4 col-md-12 col-lg-4 py-4 py-lg-0">
             <div class="card border-0 position-relative bg-lyseBrun">
-                <img src="images/Bestron-Chocolate-Fountain.jpg" class="card-img-top px-lg-2" alt="chokolade">
+                <img src="images/FyldteChokoEksklusiv.png" class="card-img-top px-lg-2" alt="chokolade">
                 <h4 class="py-3 px-lg-2">Fyldte chokolader</h4>
                 <p class="produktantal px-lg-2">24 stk.</p>
                 <span role="button" class="billede-knap">149 kr.</span>
